# oztab

./: .gitignore  README.md  pyproject.toml
data/: N_coefficients.csv
notebooks/: tour.ipynb
proofs/: null_coefficient_S_n-1_1.tex
scripts/: emit_n1_json.py  emit_tableaux_json.py  gen_n1.py  gen_tableaux.py  gen_two_row.py  n1_tableaux.html  null_injection.py  oz_tableaux.html  profile_report.py  sage_check.py  sweep_nonneg.py
src/oztab/: __init__.py  coefficients.py  multisets.py  n1.py  profiles.py  schur.py  tableaux.py
tests/: test_counting.py  test_n1_formula.py  test_regression.py  test_schur.py
